--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.055
+:Revision: 0.056
 
 _Version: {doc_version}_  +
 _Document Revision: {doc_revision}_ +
@@ -39,5 +39,6 @@ List of the changes that have occurred between one or more releases.
 |0.053    | 2018-11-02                   | Insert Khronos registration mark (R)
 |0.054    | 2018-11-07                   | Various grammatical and sentence structure changes or fixes
 |0.055    | 2019-04-16                   | Apply Etem Deniz recommendations for fixes or changes
+|0.056    | 2019-04-16                   | Update the Khronos copyright year from '18 to '19
 //|x.x      | [red yellow-background]#???# |
 |=============================
